--- a/index.html
+++ b/index.html
@@ -9,73 +9,68 @@
 </head>
 <body>
     <section>
-		<aside>
-			<p>
-				Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-			</p>
+		<aside>			
+            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>			
 		</aside>
 
 		<div class="container">
 			<nav>
-				<p>Fixed</p>
+				Fixed
 			</nav>
 
 			<main>
-				<p>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				</p>
-				<p>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				</p>
-				<p>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-					Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				</p>
+
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
 			</main>
 		</div>
 
 		<aside>
-			<p>
-				Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-				Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-			</p>
+			
+            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+			
 		</aside>
 	</section>
 	<footer>
-			<p>Fixed</p>
+			Fixed
 	</footer>
 </body>
 </html>
