--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section>
-		<aside>			
+		<aside class="left-sidebar">			
             Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
             Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
             Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
@@ -56,7 +56,7 @@
 			</main>
 		</div>
 
-		<aside>
+		<aside class="right-sidebar">
 			
             Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
             Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
