media queries added

--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
 </head>
 <body>
     <section>
-		<aside class="left-sidebar">			
-            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
-            Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>			
-		</aside>
+		<aside class="left-sidebar">	           
+                <article>
+                    Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                    Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                    Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                    Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                    Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                    Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                    Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>
+                    Mockplus team has put together 21 best hero image website samples and templates which help you to craft your own heroic image and capture the visitor’s attention. <br>			
+		
+                </article>	
+        </aside>
 
 		<div class="container">
 			<nav>
@@ -69,6 +72,7 @@
 			
 		</aside>
 	</section>
+    
 	<footer>
 			Fixed
 	</footer>
